# BangaloreNow-OSPI26

./: .gitignore  README.md  SECURITY.md  SETUP_GUIDE.md  package.json  vercel.json
.github/workflows/: scrape.yml
Web_Scraping/event_scraper/: merge_events.py
Web_Scraping/event_scraper/event_scraper/: items.py
backend/: .gitignore  =2.0.43  create.sql  pyproject.toml  requirements.txt  test_db_connection.py  vercel.json
backend/api/: index.py
backend/app/: crud.py  main.py  model.py  schemas.py  vercel_app.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6d002c7f35d1_initial_migration.py  6fe54f0d066e_added_source_url.py
backend/app/api/: dependecies.py  main.py
backend/app/api/routes/: events.py
backend/app/core/: config.py  db.py
backend/dbconfig/: cleanup.sql  create.sql
data_extraction/: .gitignore  README.md  requirements.txt
data_extraction/event_scraper/: consolidate_events.py  cross_source_dedup.py  geocode_test.py  load_to_supabase.py  output_enhancer.py  run_allevents.py  run_district.py  run_eventbrite.py  run_pipeline.py  schedule_eventbrite.py  zomato_district_scraper.py
data_extraction/event_scraper/event_scraper/: items.py  middlewares.py  pipelines.py  settings.py
docs/: API_EXAMPLES.md  IMPLEMENTATION_GUIDE.md  POPUP_DESIGN_GUIDE.md  QUICK_START.md  README_EVENT_MAP.md
frontend/: .env.production  .gitignore  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  leaflet-custom.css
frontend/src/components/: EventsList.jsx  FilterPanel.jsx  FilterStatusBar.jsx  (+9 more)
(+16 files in other folders)
